--- a/project 1/index.html
+++ b/project 1/index.html
@@ -61,8 +61,7 @@
 
 <section id="halftimeshow" class="flex-area">
     <h3 class="bebas-neue-regular">Halftime Show Performance</h3>
-<iframe width="800" height="450" src="https://www.youtube.com/embed/G6FuWd4wNd8?si=LZKsR3asrNS5C5__&amp;start=7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <h4></h4>
+<iframe width="800" height="450" src="https://www.youtube.com/embed/ohyeURFUSs0?si=FVjjNsIUXm-aKFRH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </section>
 
 
